syntax = "proto3";

option csharp_namespace = "GerpcServer.Protos";

import "google/protobuf/timestamp.proto";

 service TrackingService{
	 rpc SendMessage(TrackingMessage) returns (TrackingResponse);
 }

 message TrackingMessage {
	 int32 deviceId = 1;
	 int32 speed = 2;
	 Location location = 3;
	 google.protobuf.Timestamp stamp = 4;
	 Sensor sensor=5;
 }

 message Location{
	 double lat = 1;
	 double long = 2;
 }

 message TrackingResponse{
	 bool success = 1;
 }

 message Sensor{
	 string key=1;
	 double value=2;
 }